# robinhood-cli

./: .gitignore  LICENSE  README.md  SECURITY.md  go.mod  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release-npm.yml  release-on-main.yml  release-python.yml
cmd/rhx/: main.go
docs/: releasing.md  testing.md
npm/: README.md  package-lock.json  package.json
npm/platform/rhx-darwin-arm64/: README.md  package.json
npm/scripts/: build-native.cjs  stage-native-package.cjs  sync-platform-versions.cjs
npm/test/: rhx-lib.test.cjs
pkg/rhx/: app.go  app_crypto_test.go  app_flags.go  app_help.go  app_test.go  auth.go  auth_test.go  brokerage.go  brokerage_normalize.go  brokerage_options.go  brokerage_orders.go  brokerage_test.go  client_api.go  config.go  config_test.go  crypto_official.go  crypto_official_test.go  crypto_status.go  errors.go  http_client.go  http_client_test.go  keyring.go  keyring_darwin.go  keyring_linux.go  keyring_unsupported.go  order_intent.go  output.go  safety.go  safety_test.go  session.go  stdlib.go  time.go
src/rhx/: __init__.py  auth.py  cli.py  config.py  errors.py  models.py  output.py  output_shape.py  safety.py
tests/: test_auth_additional.py  test_auth_flow.py  test_auth_security_coverage.py  test_cli_commands_extended.py  test_config_security.py  test_crypto_provider.py  test_errors.py  test_json_contract.py  test_live_mode.py  test_models_validation.py  test_option_mapping.py  test_output.py  test_output_shape.py  test_robin_stocks_provider.py  test_safety_engine.py
(+8 files in other folders)
