[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhx"
version = "0.2.3"
description = "Auth-first Robinhood CLI wrapper for agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ian Finlay" }]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "rich>=13.7.0",
  "keyring>=25.0.0",
  "tenacity>=8.3.0",
  "robin-stocks>=3.4.0",
  "tomli-w>=1.0.0",
  "PyNaCl>=1.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0",
]

[project.scripts]
rhx = "rhx.cli:app"

[project.urls]
Homepage = "https://github.com/finlayi/robinhood-cli"
Repository = "https://github.com/finlayi/robinhood-cli"
Issues = "https://github.com/finlayi/robinhood-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
